# wasm-game-of-life

./: .gitignore  Cargo.toml  README.md  pre-commit
.github/workflows/: rust_ci.yaml
src/: lib.rs
tests/: web.rs
www/: index.html  index.js
