[package]
name = "wasm-game-of-life"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true}
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["console"]}

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
lto = true
